//
//  Copyright 2020 Docker Compose CLI authors

//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at

//      http://www.apache.org/licenses/LICENSE-2.0

//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto3";

package com.docker.api.protos.streams.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/docker/compose-cli/v2/cli/server/protos/streams/v1;v1";

service Streaming {
	rpc NewStream(stream google.protobuf.Any) returns (stream google.protobuf.Any);
}

enum IOStream {
	STDIN = 0;
	STDOUT = 1;
	STDERR = 2;
}

message BytesMessage {
	IOStream type = 1;
	bytes value = 2;
}

message ResizeMessage {
	uint32 width = 1;
	uint32 height = 2;
}

message ExitMessage {
	uint32 status = 1;
}
